--- a/circle-array/package.json
+++ b/circle-array/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "circle-squares-array",
+  "name": "circle-array",
   "version": "1.0.0",
   "description": "",
-  "main": "circle-squares-array.js",
+  "main": "circles-array.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -10,8 +10,6 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "canvas-sketch": "^0.7.7",
-    "canvas-sketch-util": "^1.10.0",
-    "colormap": "^2.3.2"
+    "canvas-sketch": "^0.7.7"
   }
 }
