--- a/puddles/package.json
+++ b/puddles/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "canvas-sketch": "^0.7.7"
+    "canvas-sketch": "^0.7.7",
+    "colormap": "^2.3.2"
   }
 }
